@@ -7,6 +7,7 @@
 * The shoe generator accepts an --application option to generate an executable stub.
 * The shoe generator accepts a --data option to generate a data directory.
 * The shoe generator accepts an --extension option to generate a C extension.
+* The shoe generator accepts a --test-unit option to generate Test::Unit tests.
 * Shoe::Tasks may no longer be built with a Gem::Specification object; pass the path to a gemspec file instead.
 * Generate a .gitignore file.
 
